--- a/public/modules/front/assets/css/welcome.css
+++ b/public/modules/front/assets/css/welcome.css
@@ -48,3 +48,71 @@ div, header {
     font-size: 48px;
     color: #00768F;
 }
+
+.header-text1{
+    font-family: 'Be Vietnam', sans-serif;
+    font-style: normal;
+    font-weight: 600;
+    font-size: 36px;
+    line-height: 53px;
+    color: #192C33;
+}
+
+.teacher-img{
+    position: absolute;
+    width: 461px;
+    height: 660px;
+    right:20%;
+    z-index: -1;
+}
+
+.dids-img{
+    position: absolute;
+    width: 35%;
+    height: 692px;
+    top: 0px;;
+    right:0;
+    z-index: -2;
+}
+.students{
+    position: absolute;
+    top:650px;
+    width: 100%;
+    height: 455px;
+    background: #52BDD4;
+
+}
+
+.student-img{
+    position:absolute;
+    left:0;
+    top:-347px;
+    width: 535px;
+    height: 803px;
+}
+
+.students-text{
+    position: absolute;
+    top:150px;
+    left:45%;
+}
+.students-text h1{
+    font-family: 'Be Vietnam', sans-serif;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 48px;
+    line-height: 70px;
+    color: #FFFFFF;
+    text-transform: uppercase;
+    margin-left: 100px;
+}
+
+.students-text p{
+    font-family: 'Be Vietnam', sans-serif;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 24px;
+    line-height: 35px;
+    color: #000000;
+}
+
