--- a/public/modules/front/assets/css/welcome.css
+++ b/public/modules/front/assets/css/welcome.css
@@ -63,49 +63,38 @@ div, header {
 }
 
 .teacher-img{
-    position: absolute;
-    width: 461px;
-    height: 660px;
-    right:20%;
-    z-index: -1;
+    z-index: 0;
+    margin-left: -50px;
 }
 
 .dids-img{
-    position: absolute;
-    width: 35%;
-    height: 692px;
-    top: 0px;;
-    right:0;
-    z-index: -2;
+    margin-top: -700px;
+    z-index: -1;
 }
 .students{
-    position: absolute;
-    top:650px;
     width: 100%;
     height: 455px;
     background: #52BDD4;
-
+    margin-top: -150px;
+    z-index: 0;
 }
 
 .student-img{
-    position:absolute;
-    left:0;
-    top:-347px;
+    margin-top: -577px;
     width: 535px;
     height: 803px;
 }
 
 .trophy-img{
-    position:absolute;
-    right:0;
-    top:225px;
     width: 280px;
     height: 230px;
+    margin-top: -5px;
 }
 .students-text{
-    position: absolute;
-    top:70px;
-    left:40%;
+    margin-left: 550px;
+    margin-top: 80px;
+    width: 671px;
+    height: 150px;
 }
 .students-text h1{
     font-family: 'Be Vietnam', sans-serif;
@@ -129,17 +118,16 @@ div, header {
 }
 
 .images-bottom{
-   margin-top: 350px;
-    margin-left: 300px;
+   margin-top: -100px;
+    margin-left: 520px;
 }
 
 .images-bottom img{
-    margin: 0 30px 0 0;
+    margin: 0 20px 0 0;
 }
 
 .teachers{
-    position: absolute;
-    top:1200px;
+    margin-top: 100px;
     width:100%;
 }
 
@@ -166,18 +154,99 @@ div, header {
 }
 
 .teachers-image{
-    position: absolute;
-    top:170px;
-    right:0;
+    margin-top: -320px;
     width: 822px;
     height: 548px;
 }
 .tests{
-    position: absolute;
     width: 100%;
-    height: 1600px;
-    top: 1900px;
+    height: 1850px;
     background: #52BDD4;
 }
 
+.tests h1{
+    font-family: 'Be Vietnam', sans-serif;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 48px;
+    line-height: 70px;
+    color: #FFFFFF;
+}
 
+.test-items{
+    margin-top: 100px;
+    height: 850px;
+    width: 90%;
+    background-position: left; /* Center the image */
+    background-repeat: no-repeat; /* Do not repeat the image */
+}
+
+.woman-img{
+    margin-right: 0;
+    margin-top: -750px;
+}
+
+.rectangle-image{
+    width: 70%;
+}
+
+.rectangle-image p{
+    font-family: 'Be Vietnam', sans-serif;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 18px;
+    line-height: 26px;
+    text-align: center;
+    color: #027189;
+    width: 270px;
+    height: 83px;
+}
+
+.all-tests {
+    margin-top: 100px;
+    margin-left: 100px;
+}
+
+.all-tests div{
+    margin-bottom: 50px
+}
+
+.all-tests img{
+    margin-left: 50px
+}
+
+.materials h1{
+    font-family: 'Be Vietnam', sans-serif;
+    font-style: normal;
+    font-weight: 600;
+    font-size: 36px;
+    line-height: 53px;
+    text-transform: uppercase;
+    color: #FFFFFF;
+
+}
+
+.materials h3{
+    font-family: 'Be Vietnam', sans-serif;
+    font-style: normal;
+    font-weight: 600;
+    font-size: 24px;
+    line-height: 35px;
+    color: #323232;
+
+}
+
+.materials p{
+    font-family: 'Be Vietnam', sans-serif;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 29px;
+    color: #323232;
+    width: auto;
+
+}
+
+.material-image{
+    margin-top: -500px;
+}
