--- a/public/modules/front/assets/css/auth.css
+++ b/public/modules/front/assets/css/auth.css
@@ -1,21 +1,6 @@
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+.left-img {
+    /*min-height: 100vh;*/
 }
-.wrapper{
-    width: 100vw;
-    height: 100vh;
-    background: url("../img/background_login.png") no-repeat;
-    background-position: 0 50%;
-}
-
-.auth-form{
-    position: absolute;
-    top: 20%;
-    right: 30%;
-}
-
 .auth-form .header-text .logo-text{
     font-family: 'Montserrat', sans-serif;
     font-style: normal;
@@ -35,4 +20,9 @@
 .auth-form .btn{
     color: #FFFFFF;
     background-color: #00A0A3;
+}
+@media screen and (max-width: 2000px) and (min-width: 900px) {
+    .left-img {
+        min-height: 100vh;
+    }
 }
