--- a/public/modules/front/assets/css/style.css
+++ b/public/modules/front/assets/css/style.css
@@ -1,69 +1,42 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 body{
-    margin: 0 0 70px 0 !important;
-    padding: 0 !important;
-    width: 100%;
-    background: #FAFBFF;
-    padding: 50px;
+    font-family: Montserrat, serif;
+
 }
 
 /* CLient home page */
 
-.homeNAvigation{
-    margin: 0;
-    margin-bottom: 20px;
-    padding: 5px;
-    width: 100%;
-    height: 60px;
-    background: #00A0A3;
-    box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.15);
+.navbar {
+    background-color: #00A0A3;
 }
 
-.homeNAvigation .container{
-    margin: 0 auto;
-    padding: 0;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-}
-
-.homeNAvigation .logo a{
-    font-family: 'Montserrat', sans-serif;
-    font-style: normal;
-    font-weight: 500;
-    font-size: 22px;
-    line-height: 27px;
-    /* identical to box height */
-
-    color: #FFFFFF;
-}
-
-.homeNAvigation .nav ul{
-
-}
-
-.homeNAvigation .nav ul li{
-    display:inline;
-    margin-right: 32px;
-
-}
-
-.homeNAvigation .nav ul li a{
-    font-family: 'Montserrat', sans-serif;
+.nav-link {
     font-style: normal;
     font-weight: 500;
     font-size: 18px;
     line-height: 22px;
-/* identical to box height */
-
-    color: #FFFFFF;}
-
-.homeNAvigation .nav ul li:last-child{
-    margin-right: 0;
+    color: #FFFFFF;
 }
 
+.nav-link:hover {
+    color: #ebebeb;
+}
+.navbar-toggler {
+    color: #ffffff;
+}
+
+.navbar-brand {
+    color:#ffffff;
+    font-style: normal;
+    font-weight: 600;
+    font-size: 22px;
+    line-height: 27px;
+}
+
+.navbar-brand:hover {
+    color: #ebebeb;
+}
 
 
 
