--- a/public/modules/front/assets/css/style.css
+++ b/public/modules/front/assets/css/style.css
@@ -5,7 +5,7 @@ body{
 
 }
 
-/* CLient home page */
+/* Navbar */
 
 .navbar {
     background-color: #00A0A3;
@@ -36,6 +36,80 @@ body{
 
 .navbar-brand:hover {
     color: #ebebeb;
+}
+
+/*Academy section*/
+
+.academy-section {
+    background-image: url("../img/welcome/teacher.png");
+    background-repeat: no-repeat;
+    background-position: top right;
+    padding-top: 250px;
+    padding-bottom: 230px;
+}
+
+.academy-section h2 {
+    font-style: normal;
+    font-weight: normal;
+    font-size: 48px;
+    line-height: 70px;
+    color: #00768F;
+}
+
+.academy-section h3 {
+    font-style: normal;
+    font-weight: 600;
+    font-size: 36px;
+    line-height: 53px;
+    color: #192C33;
+}
+
+.academy-section p {
+    font-style: normal;
+    font-weight: normal;
+    font-size: 18px;
+    line-height: 26px;
+    color: #000000;
+}
+/*Pupils section*/
+.pupils-section {
+    background-image: url("../img/welcome/trophy.png"), url("../img/welcome/student.png");
+    background-repeat: no-repeat;
+    background-position: right bottom, left bottom;
+    background-color: #06BFC2;
+    position: relative;
+    z-index: -1;
+    padding-top: 100px;
+    padding-bottom: 50px;
+}
+
+.pupils-section h2 {
+    font-style: normal;
+    font-weight: bold;
+    font-size: 48px;
+    line-height: 70px;
+    color: #FFFFFF;
+}
+
+.pupils-section p {
+    font-style: normal;
+    font-weight: normal;
+    font-size: 24px;
+    line-height: 35px;
+    color: #000000;
+    margin-top: 35px;
+}
+
+.pupils-section .certificates {
+    padding-bottom: 200px;
+}
+
+.pupils-section .certificates .certificate-img {
+    margin-left: 50px;
+    min-width: 150px;
+    min-height: 100px;
+    max-width: 220px;
+    max-height: 150px;
 }
 
 
