--- a/public/modules/front/assets/css/style.css
+++ b/public/modules/front/assets/css/style.css
@@ -77,8 +77,6 @@ body{
     background-repeat: no-repeat;
     background-position: right bottom, left bottom;
     background-color: #06BFC2;
-    position: relative;
-    z-index: -1;
     padding-top: 100px;
     padding-bottom: 50px;
 }
@@ -109,10 +107,33 @@ body{
     min-width: 150px;
     min-height: 100px;
     max-width: 220px;
-    max-height: 150px;
+    max-height: 180px;
 }
 
+/*Teachers section*/
+.teachers-section {
+    background-image: url("../img/welcome/teachers.png");
+    background-repeat: no-repeat;
+    background-position: right bottom;
+    padding-top: 200px;
+    padding-bottom: 250px;
+}
 
+.teachers-section h2{
+    font-style: normal;
+    font-weight: bold;
+    font-size: 48px;
+    line-height: 70px;
+    color: #192C33;
+}
+
+.teachers-section p{
+    font-style: normal;
+    font-weight: normal;
+    font-size: 24px;
+    line-height: 35px;
+    color: #000000;
+}
 
 .account{
     position: fixed;
