--- a/public/modules/front/assets/css/responsive.css
+++ b/public/modules/front/assets/css/responsive.css
@@ -34,7 +34,7 @@
         z-index: -1;
         padding-top: 20px;
         padding-bottom: 80px;
-
+        height: 460px;
     }
 
     .pupils-section h2 {
