Welcome page ended;

--- a/public/modules/front/assets/css/style.css
+++ b/public/modules/front/assets/css/style.css
@@ -5,6 +5,11 @@ body{
 
 }
 
+.card {
+    background: #FFFFFF;
+    box-shadow: 0 1px 2px 1px rgba(0, 0, 0, 0.2);
+    border-radius: 32px;
+}
 /* Navbar */
 
 .navbar {
@@ -183,7 +188,73 @@ body{
     line-height: 35px;
     color: #000000;
 }
+/*Tests section*/
+.tests-section {
+    background-image: url("../img/welcome/woman-image.png");
+    background-repeat: no-repeat;
+    background-position: right;
+    background-color: #06BFC2;
+    padding-top: 50px;
+    padding-bottom: 50px;
+}
 
+.tests-section .quizzes-card{
+    background-image: url("../img/welcome/rectangle-image.png");
+    background-size: 100%, 100%;
+    background-repeat: no-repeat;
+    padding-top: 30px;
+    padding-bottom: 100px;
+}
+.tests-section h2 {
+    font-style: normal;
+    font-weight: bold;
+    font-size: 48px;
+    line-height: 70px;
+    color: #FFFFFF;
+}
+.stretched-link::after {
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    z-index: 1;
+    pointer-events: auto;
+    content: "";
+    background-color: rgba(0,0,0,0);
+}
+.quiz-img {
+    width: 100%;
+    height: 15vw;
+    object-fit: cover;
+    border-bottom-left-radius: 32px;
+    border-top-left-radius: 32px;
+}
+
+.quiz-detail {
+    font-style: normal;
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 24px;
+    color: #4A4A4A;
+    margin-bottom: 15px;
+    padding-left: 15px
+}
+
+.quiz-detail-title {
+    font-size: 20px;
+}
+
+.quiz-detail i {
+    color:#00A0A3;
+}
+.quizzes .btn-primary {
+    background: linear-gradient(180deg, #17E8EC 0%, #00A0A3 100%);
+    border-radius: 19.4505px;
+    font-weight: 600;
+    font-size: 18px;
+    line-height: 22px;
+}
 .account{
     position: fixed;
     padding: 20px 20px;
@@ -352,6 +423,15 @@ body{
     background-color: inherit;
     cursor: pointer;
 
+}
+
+footer a {
+    color: #323232;
+}
+
+footer a:hover {
+    color: #242424;
+    text-decoration: none;
 }
 
 
