--- a/public/modules/front/assets/css/responsive.css
+++ b/public/modules/front/assets/css/responsive.css
@@ -24,7 +24,6 @@
     }
 
     /*Pupils section*/
-
     .pupils-section {
         background-image: url("../img/welcome/trophy-mobile.png"), url("../img/welcome/student-mobile.png");
         background-repeat: no-repeat;
@@ -67,14 +66,52 @@
         padding-bottom: 150px;
     }
 
-    .teachers-section h2{
+    .teachers-section h2 {
         font-size: 24px;
         line-height: 35px;
     }
 
-    .teachers-section p{
+    .teachers-section p {
         font-size: 14px;
         line-height: 20px;
+    }
+
+    .tests-section {
+        background-image: none;
+        padding-top: 50px;
+        padding-bottom: 50px;
+    }
+
+    .tests-section .quizzes-card {
+        background-image: none;
+        padding-top: 0;
+        padding-bottom: 20px;
+    }
+
+    .tests-section h2 {
+        font-size: 24px;
+        line-height: 35px;
+    }
+
+    .quiz-detail {
+        font-size: 10px;
+        line-height: 24px;
+        margin-bottom: 0;
+
+    }
+
+    .quiz-detail-title {
+        font-size: 12px;
+    }
+
+    .quiz-img {
+        width: 100%;
+        height: 25vh;
+    }
+
+    .quizzes .btn-primary {
+        font-size: 10px;
+        line-height: 12px;
     }
 
 }
@@ -98,5 +135,21 @@
         padding-bottom: 250px;
     }
 
+    .tests-section {
+        background-image: none;
+        padding-top: 50px;
+        padding-bottom: 50px;
+    }
+
+    .tests-section .quizzes-card {
+        background-image: none;
+        padding-top: 0;
+        padding-bottom: 20px;
+    }
+
+    .quiz-img {
+        width: 100%;
+        height: 20vw;
+    }
 
 }
