--- a/public/modules/front/assets/css/style.css
+++ b/public/modules/front/assets/css/style.css
@@ -447,4 +447,61 @@ footer a:hover {
 }
 
 
+.checkout-quiz-img{
+    position: relative;
+    margin: 10px 20px;
+    border-radius: 16px;
+    border: 1px solid #dddddd;
+    width: 100px;
+    height: 100px;
+}
 
+.checkout-box{
+    width: 100%;
+    padding: 20px;
+    background: #FFFFFF;
+    box-shadow: 0px 1px 2px 1px rgba(0, 0, 0, 0.2);
+    border-radius: 24px;
+}
+
+.checkout-box h4{
+    font-size: 18px;
+}
+
+.checkout-box .quiz-duration{
+    margin: 2%;
+    font-family: 'Montserrat', "Open Sans";
+    font-style: normal;
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 24px;
+    color: #4A4A4A;
+}
+
+.checkout-box .checkout-btn{
+    margin-top: 5%;
+    background-color: #FF3535;
+    color: #eeeeee;
+    padding: 10px 10%;
+    border: 0;
+    border-radius: 8px;
+}
+
+.checkout-box .checkout-btn:hover{
+    text-decoration: underline;
+}
+
+@media (max-width: 576px) {
+
+    .quiz-name{
+        font-size: 18px;
+    }
+    .checkout-quiz-img{
+        position: relative;
+        margin: 15px 5px;
+        border-radius: 8px;
+        border: 1px solid #dddddd;
+        width: 60px;
+        height: 60px;
+    }
+}
