--- a/public/modules/front/assets/css/style.css
+++ b/public/modules/front/assets/css/style.css
@@ -491,6 +491,86 @@ footer a:hover {
     text-decoration: underline;
 }
 
+
+
+
+
+.avatar_user{
+    position: relative;
+    border: 1px solid #dddddd;
+    border-radius: 16px;
+}
+
+.avatar_user img{
+    width: 100%;
+    border-radius: 16px;
+}
+
+.avatar_user .image-edit{
+    padding: 3px 0;
+    position: absolute;
+    bottom: 5%;
+    right: 5%;
+    width: 30px;
+    font-size: 18px;
+    color: #0a0a0d;
+    height: 30px;
+    text-align: center;
+    align-items: center;
+    background-color: #ffffff;
+    border-radius: 50%;
+    cursor: pointer;
+    z-index: 1;
+    transition: 0.2s;
+}
+
+.avatar_user .image-edit:hover{
+    font-size: 20px;
+    padding: 0;
+    color: #323232;
+    transition: 0.2s;
+}
+
+
+.profile-box-nav{
+    margin-top: 20px;
+}
+
+
+.profile-box-nav li{
+    list-style: none;
+    margin-top: 10px;
+}
+
+.profile-box-nav li a{
+    font-family: "Montserrat", "Open Sans";
+    font-style: normal;
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 22px;
+    color: #323232;
+}
+
+
+.user_edit input[type="file"] {
+    width: 2px;
+    height: 2px;
+    overflow: hidden;
+    opacity: 0;
+}
+
+
+
+.user_edit{
+    padding: 20px;
+    background: #FFFFFF;
+    box-shadow: 0px 1px 2px 1px rgba(0, 0, 0, 0.25);
+    border-radius: 16px;
+}
+
+/*********************mobile***********************/
+
+
 @media (max-width: 576px) {
 
     .quiz-name{
@@ -508,4 +588,36 @@ footer a:hover {
     .quiz-description{
         font-size: 14px;
     }
+
+
+    .avatar_user img{
+        width: 100%;
+        border-radius: 16px;
+    }
+
+    .avatar_user .image-edit{
+        padding: 6px 0;
+        position: absolute;
+        bottom: 5%;
+        right: 5%;
+        font-size: 28px;
+        color: #0a0a0d;
+        width: 50px;
+        height: 50px;
+        text-align: center;
+        align-items: center;
+        background-color: #ffffff;
+        border-radius: 50%;
+        cursor: pointer;
+        z-index: 1;
+        transition: 0.2s;
+    }
+
+    .avatar_user .image-edit:hover{
+        font-size: 30px;
+        padding: 3px 0;
+        color: #323232;
+        transition: 0.2s;
+    }
+
 }
